welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:4: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var offset:Int 
      ^Array2:4: error: local variables must be initialized
  var offset:Int 
      ^